# MolTrace

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_GUARDRAILS.md  SECURITY.md  render.yaml
moltrace_backend/: .env.example  .env.render.example  .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml  railway.toml  render.yaml
moltrace_backend/.github/workflows/: tests.yml
moltrace_backend/alembic/versions/: 0001_week8_baseline.py  0005_week25_nmr2d_run_canonical_fields.py  0008_phase60_product_orchestration.py  0010_ai_evidence_review.py  0011_user_gsd_graduated_at.py  0012_prediction_feedback_reason_code.py  0013_dossier_max_daily_dose.py  0014_dossier_route_elemental_summary.py  0015_dossier_created_by_user_id.py  0016_regulatory_ai_decisions.py  0017_sso_connections.py  0018_scim_provisioning.py  0019_mfa_passkeys.py  0020_session_token_hardening.py  0021_reaction_green_metrics.py  0022_reaction_project_owner_id.py  0023_spectracheck_project_owner_id.py  0024_audit_hash_chain.py  0025_reaction_plate_designs.py  0026_reaction_safety_screenings.py  0027_e_signature_record_binding.py  0028_alcoa_reason_soft_delete.py  0029_reaction_feedback.py  0030_reaction_warm_start_priors.py
moltrace_backend/docs/: codex_future_package_standard.md  codex_week28_candidate_predicted_nmr_mobile_prompt.md  codex_week29_hrms_exact_mass_prompt.md  codex_week32_msms_fragmentation_tree_prompt.md  codex_week33_unified_candidate_confidence_prompt.md  codex_week35_lcms_import_bridge_prompt.md  codex_week36_lcms_feature_detection_prompt.md  codex_week37_lcms_feature_grouping_prompt.md  fe_handoff_alcoa_hardening.md  fe_handoff_argon2_password_hashing.md  fe_handoff_audit_chain.md  fe_handoff_esignature_part11.md  fe_handoff_field_level_encryption.md  fe_handoff_impurity_assessment.md  fe_handoff_mfa_passkeys.md  fe_handoff_nitrosamine_cumulative_risk.md  fe_handoff_policy_as_code_authz.md  fe_handoff_prompt18_ops_dashboard.md  fe_handoff_reaction_agent.md  fe_handoff_reaction_feedback.md  fe_handoff_reaction_green_metrics.md  fe_handoff_reaction_loop_propose_next.md  fe_handoff_reaction_pareto.md  fe_handoff_reaction_plate_designs.md  fe_handoff_reaction_regulatory_compliance.md  fe_handoff_reaction_safety_screenings.md  fe_handoff_reaction_warm_start.md  fe_handoff_scim_provisioning.md  fe_handoff_secrets_management.md  fe_handoff_session_hardening.md  fe_handoff_siem_detections.md  fe_handoff_sso_oidc.md  fe_handoff_tls_security_headers.md  fe_handoff_validation_lifecycle.md  ops_secrets_management.md  ops_tls_posture.md  raw_fid_prompt_manual_promotion_design.md  security_sdlc_gates.md  spectracheck_output_contract.md  spectrum_reason_endpoint_fe_handoff.md  (+10 more)
moltrace_backend/docs/security/: backup_dr.md  breach_notification.md  compliance_controls_map.md  incident_response_plan.md  incident_runbooks.md  owasp_api_top10_p16.md  pentest_program.md  security_findings_register.md  siem_detections.md  threat_model.md  trust_center.md  vulnerability_disclosure_policy.md  waf_edge_runbook.md  zero_trust_infra.md
moltrace_backend/nmrnet_service/: README.md  app.py  requirements.txt
moltrace_backend/scripts/: build_hose_kb.py  build_similarity_index.py  prepare_nmrshiftdb2_bruker_fixtures.py  validate_raw_fid_prompt_sidecar.py
moltrace_backend/src/moltrace/: __init__.py
moltrace_backend/src/moltrace/regulatory/: __init__.py
moltrace_backend/src/moltrace/spectroscopy/: __init__.py
moltrace_backend/src/nmrcheck/: __init__.py  ai_evidence_store.py  ai_inference_store.py  alcoa.py  analysis.py  api.py  audit_chain.py  authz.py  baseline.py  benchmark.py  candidate.py  candidate_predicted.py  carbon13.py  chemistry.py  compound_class_priors.py  compound_classes.py  compound_registry_store.py  database.py  dept.py  detections.py  display_view.py  dp4_scoring.py  dr_verify.py  esign.py  exceptions.py  export_raw_package.py  fid.py  fid_pipeline_adapter.py  field_crypto.py  golden_pilot_store.py  gsd.py  gsd_hmdb_style_validation.py  gsd_hmdb_validation.py  gsd_prompt3_validation.py  interoperability_store.py  ir_timeline.py  jcoupling_prediction.py  jobs.py  karplus_validation.py  kms.py  (+61 more)
moltrace_backend/tests/: conftest.py  test_admin_gsd_graduation.py  test_admin_gsd_graduation_history.py  test_ai_active_learning.py  test_ai_evidence_review_api.py  test_ai_finetune.py  test_ai_ms_models.py  test_ai_rag.py  test_ai_registry.py  test_ai_router.py  test_analysis.py  test_analytics_roi_api.py  test_audit_chain.py  test_auth.py  test_auth_sso_oidc_api.py  test_authz_policy_matrix.py  test_authz_route_regression_api.py  test_benchmark.py  test_body_id_owner_scoping_api.py  test_chemistry.py  test_collaboration_rbac_api.py  test_compliance_register.py  test_compound_registry_api.py  test_conftest_fixtures.py  test_cspm_drift.py  test_current_state_guard.py  test_data_datasets_pipeline.py  test_dp4_scoring.py  test_dr_verify.py  test_e2e.py  test_end_to_end_regression.py  test_esign_part11.py  test_eval_harness.py  test_feedback.py  test_fid.py  test_fid_reader.py  test_field_crypto.py  test_frontend_auth_pages_api.py  test_frontend_may10_11_contract_api.py  test_gsd.py  (+190 more)
moltrace_backend/tests/fixtures/carbon13/: invalid_13c.csv
moltrace_backend/tests/fixtures/current_state/: README.md  ethanol_carbon13_inputs.json  invalid_smiles_inputs.json
moltrace_backend/tests/fixtures/dept/: ethanol_dept135.csv  ethanol_dept90.csv  glycoside_apt.csv  out_of_range_dept.csv
moltrace_backend/tests/fixtures/gsd_prompt3_validation/: gsd_prompt3_validation_report_v1_20260527T095835Z.csv  gsd_prompt3_validation_report_v1_20260527T095835Z.json  gsd_prompt3_validation_report_v1_20260527T100117Z.json  gsd_prompt3_validation_report_v1_20260527T100256Z.csv  gsd_prompt3_validation_report_v1_20260527T100256Z.json  (+25 more)
moltrace_backend/tests/spectroscopy/: test_audit_trail.py  test_nmrnet_wrapper.py  test_nus_reconstruct.py  test_qnmr_purity.py  test_similarity_scoring.py  test_solvent_impurity.py  test_verification_scorer.py
(+1750 files in other folders)
