[project]
name = "nmrcheck"
version = "0.39.0"
description = "Rule-based 1H NMR checker with Postgres persistence, account verification, password reset, and queued background jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "rdkit>=2025.9.1",
    "pydantic[email]>=2.7",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.14,<2.0",
    "rq>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "lttbc>=0.3.0",
    "lmfit>=1.3.4",
    "faiss-cpu>=1.14.2",
]

[project.scripts]
moltrace-raw-fid-sidecar-report = "nmrcheck.raw_fid_prompt_validation:main"
moltrace-gsd-prompt3-sidecar-report = "nmrcheck.gsd_prompt3_validation:main"
moltrace-gsd-hmdb-sidecar-report = "nmrcheck.gsd_hmdb_validation:main"
moltrace-gsd-hmdb-style-sidecar-report = "nmrcheck.gsd_hmdb_style_validation:main"
moltrace-karplus-jcoupling-report = "nmrcheck.karplus_validation:main"

[project.optional-dependencies]
fid = [
    "nmrglue>=0.11",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.20",
    "ruff>=0.11",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmrcheck", "src/moltrace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
packages = ["nmrcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = [
    "current_state: stable endpoint and processing guardrails that must pass before feature work is accepted",
    "slow: long-running tests (>30s) excluded from the default run; opt in with `pytest -m slow`",
]
