[project]
name = "nmrcheck"
version = "0.53.0"
description = "Rule-based 1H NMR checker with Postgres persistence, account verification, password reset, and queued background jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "rdkit>=2025.9.1",
    "pydantic[email]>=2.7",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.14,<2.0",
    "rq>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "lttbc>=0.3.0",
    "lmfit>=1.3.4",
    "faiss-cpu>=1.14.2",
    "pyjwt[crypto]>=2.9",
    "pyotp>=2.9,<3.0",
    "webauthn>=2.8,<3.0",
    # Runtime HTTP client for the enterprise OIDC/SSO flow (oidc_client.py —
    # IdP token exchange + JWKS fetch). It is imported at app load via api.py,
    # so it must be a runtime dependency, NOT dev-only, or the production build
    # (`uv sync --no-dev`) starts uvicorn without it and crashes on import.
    "httpx>=0.28",
    "argon2-cffi>=23.1",
]

[project.scripts]
moltrace-raw-fid-sidecar-report = "nmrcheck.raw_fid_prompt_validation:main"
moltrace-gsd-prompt3-sidecar-report = "nmrcheck.gsd_prompt3_validation:main"
moltrace-gsd-hmdb-sidecar-report = "nmrcheck.gsd_hmdb_validation:main"
moltrace-gsd-hmdb-style-sidecar-report = "nmrcheck.gsd_hmdb_style_validation:main"
moltrace-karplus-jcoupling-report = "nmrcheck.karplus_validation:main"
moltrace-deployment-gate = "moltrace.spectroscopy.ops.deployment_gate:main"

[project.optional-dependencies]
fid = [
    "nmrglue>=0.11",
    "numpy>=1.26",
]
# Word (.docx) rendering for the ICH Q1A(R2) stability protocol generator (Prompt 11). OPTIONAL: the
# generator's native path returns a structured StabilityProtocol and renders Markdown with zero extra
# dependencies; installing this group upgrades StabilityProtocol.to_docx() to emit a .docx. The
# default CI `test` job does not install it, so the always-on path is what gets gated; the docx test
# `pytest.importorskip("docx")`s instead.
docx = [
    "python-docx>=1.1.2",
]
# RAG over the regulatory corpus (Prompt 10). OPTIONAL: regulatory_search runs on a zero-dependency
# lexical retriever and synthesize_answer has a deterministic extractive path, so the engine and its
# tests run with no extra deps. Installing this group enables the production backends — Claude
# synthesis (anthropic) and OpenAI embeddings for the vector retriever. The default CI `test` job
# does not install it; the LLM/embedding paths are injected in tests via fakes.
rag = [
    "anthropic>=0.40",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    # Parallel test execution (`pytest -n auto`) — used by the CI backend job to
    # fan the suite across runner cores instead of running ~1.5k tests serially.
    "pytest-xdist>=3.5",
    # Property-based testing of the regulated ICH math (Prompt 21 validation suite):
    # generate random valid doses/levels/elements and assert guideline invariants hold.
    "hypothesis>=6.0",
    "mypy>=1.20",
    "ruff>=0.11",
]
# Phase 0 foundation (Prompt 19): heavy data-lineage / experiment-tracking /
# data-validation tooling. These are OPTIONAL: every metric, the versioned
# output contract, content-addressed dataset hashing, native run tracking, the
# native data validator, and the GAMP 5 / ICH document generators all work with
# ZERO extra dependencies (numpy/scipy only, already core via lmfit). Installing
# this group upgrades those native paths to the industry-standard adapters
# (MLflow run store, DVC+S3 remote, Great Expectations suites). The default CI
# `test` job intentionally does NOT install this group so the always-on Phase 0
# path is what gets gated; adapter tests `pytest.importorskip` these instead.
infra = [
    "mlflow>=2.9,<3.0",
    "dvc[s3]>=3.0,<4.0",
    # Pinned to the mature 0.18.x line: the stable `from_pandas` dataset API the
    # adapter targets (GE 1.x reworked the public API substantially).
    "great-expectations>=0.18,<1.0",
    "pandas>=2.0",
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmrcheck", "src/moltrace"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored sample datasets (e.g. nmrglue's Python-2 example scripts) are not
# our source and must not be linted.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# Test modules embed long literal data -- reference NMR/MS strings, deep JSON
# response assertions, and parametrize tables -- where the 100-column limit
# hurts readability more than it helps. Line-length is relaxed for tests only;
# src/ remains strictly enforced.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
packages = ["nmrcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = [
    "current_state: stable endpoint and processing guardrails that must pass before feature work is accepted",
    "slow: long-running tests (>30s) excluded from the default run; opt in with `pytest -m slow`",
]
